--- a/assets/scss/03_components/_header.scss
+++ b/assets/scss/03_components/_header.scss
@@ -13,6 +13,11 @@
       @media only screen and (min-width: 992px) {
         margin-bottom: 30px;
       }
+
+      @media only screen and (min-width: 1200px) {
+        margin-bottom: 0;
+        padding-inline: 0;
+      }
     }
   }
 }
